service items updated

--- a/Main/index.html
+++ b/Main/index.html
@@ -51,52 +51,77 @@
             <h2>My Services</h2>
             <div id="serv_container">
                 <figure class="services_group">
-                    <h3>Factory Guide</h3>
+                    <h3>Business and Factory Guide</h3>
                     <img src="../Resources/img/placeholder.png" alt="Factory Visiting Guide" class="services_img">
-                    <figcaption>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum quidem est nobis
-                        error. Nobis voluptates commodi blanditiis voluptatum nisi quidem molestias. Laborum eum
-                        sapiente nobis minima, quam tempora quae deleniti?</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Accompanies foreign clients on factory and company visits in industries such as electronics, jewelry, furniture, textiles, and construction materials;</li>
+                            <li>Assists in business negotiations, product inspections, and supplier meetings;</li>
+                            <li>Provides industry-specific translation and cultural guidance.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
                 <figure class="services_group">
-                    <h3>Events Interpreter</h3>
+                    <h3>Event and Conference Interpreter</h3>
                     <img src="../Resources/img/placeholder.png" alt="Interpreter for Private Events"
                         class="services_img">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error explicabo architecto
-                        omnis quaerat id itaque optio doloremque eaque. Voluptate non nemo aliquid rem deleniti est
-                        cupiditate numquam autem debitis id?</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Provides consecutive and simultaneous interpretation for business meetings, trade negotiations, and corporate events;</li>
+                            <li>Specializes in industries such as renewable energy, medical technology, real estate, and industrial equipment;</li>
+                            <li>Experienced in high-level discussions with executives and government representatives.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
                 <figure class="services_group">
-                    <h3>Exhibition Store Translator</h3>
+                    <h3>Exhibition and Trade Show Translator</h3>
                     <img src="../Resources/img/placeholder.png" alt="Canton Fair" class="services_img">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi excepturi illo aspernatur
-                        nobis? Harum hic odit voluptatibus quod nemo consectetur deleniti ipsam exercitationem, deserunt
-                        laborum asperiores cupiditate, laboriosam ut fugiat?</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Experience in major events like Canton Fair, Jewelry & Gem Asia, and Prolight + Sound Guangzhou;</li>
+                            <li>Assists in business matchmaking, client introductions, and contract discussions;</li>
+                            <li>Offers on-site translation services for international trade fairs and exhibitions in China and Hong Kong.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
                 <figure class="services_group">
-                    <h3>Tourist Guide</h3>
+                    <h3>Tourist Guide and Travel Assistant</h3>
                     <img src="../Resources/img/placeholder.png" alt="Tourist Guide" class="services_img">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus beatae nesciunt
-                        corrupti laboriosam, perspiciatis optio, consectetur est repellat quibusdam odio molestiae vel
-                        fuga in fugit amet eaque iure magni quidem?</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Provides customized travel itineraries and local insights;</li>
+                            <li>Assists with shopping, sightseeing, cultural experiences, and airport transfers;</li>
+                            <li>Guides international visitors in Guangzhou, Hong Kong, Shenzhen, and other major Chinese cities.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
                 <figure class="services_group">
-                    <h3>Model Shooting Translator</h3>
+                    <h3>Media and Fashion Industry Translator</h3>
                     <img src="../Resources/img/placeholder.png" alt="Model Shooting translator" class="services_img">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto distinctio quam
-                        repellat accusamus tempore sit magnam, dicta enim blanditiis autem placeat id ipsam vitae nobis,
-                        sint atque quidem maiores inventore!</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Provides translation for fashion shoots, advertisement productions, and model contracts;</li>
+                            <li>Ensures smooth communication between international models, photographers, and production teams;</li>
+                            <li>Experienced in handling portrait rights negotiations and on-set interpretation.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
                 <figure class="services_group">
-                    <h3>Translator Agent</h3>
+                    <h3>Multilingual Translator Hub</h3>
                     <img src="../Resources/img/placeholder.png" alt="Find a translator for other languages"
                         class="services_img">
-                    <figcaption>Need a translator for other languages I don't work with? I can also find you a
-                        translator for that mater</figcaption>
+                    <figcaption>
+                        <ul>
+                            <li>Access to a vast network of professional translators across multiple languages;</li>
+                            <li>On-demand matching with the most suitable translator for specific needs;</li>
+                            <li>Quality assurance and accuracy checks to ensure high translation standards.</li>
+                        </ul>
+                    </figcaption>
                 </figure>
 
             </div>
